[package]
name = "quantum-agent"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"
codegen-units = 1

[profile.dev]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
uuid = {version = "1.7.0", features = ["v4"]}
axum = {version = "0.7.4", features = ["macros"]}
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
num = "0.4.1"
serde_yaml = "0.9.32"
reqwest = { version = "0.11.23", features = ["json", "blocking", "native-tls-vendored"] }
http = "1.1.0"

